# Console-Engine

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
config/: settings.yaml
include/: character.hpp  config.hpp  console.hpp  cursor.hpp  cursor_info.hpp  exception.hpp  font.hpp  font_info.hpp  font_info_ex.hpp  screen_buffer.hpp  screen_buffer_size.hpp  util.hpp  win_utils.hpp  windows.hpp
include/console/: character.hpp  console.hpp  cursor_info.hpp  exception.hpp  font_info_ex.hpp  screen_buffer.hpp  screen_buffer_size.hpp  win_utils.hpp
include/math/: concepts.hpp  constants.hpp  matrix.hpp  utils.hpp  vector.hpp
src/: character.cpp  console.cpp  main.cpp  util.cpp  win_utils.cpp
text/: title.yaml
